chore: initial commit & add husky lint & prettier working

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "src/*.{ts,tsx}": [
       "yarn format:fix",
       "yarn lint",
-      "yarn test:staged"
+      "yarn test:ci"
     ],
     "src/*.+(json|css|md)": [
       "prettier --write"
